--- a/client/src/app/core/shared/error-dialog/error-dialog.component.html
+++ b/client/src/app/core/shared/error-dialog/error-dialog.component.html
@@ -3,5 +3,5 @@
   <p>{{message}}</p>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-  <button class="button border-1 mt-3" mat-button mat-dialog-close="true" cdkFocusInitial color="basic">ok</button>
+  <button class="button border-1 mt-3" mat-button mat-dialog-close="true" cdkFocusInitial color="basic" i18n="@@ok_button">Ok</button>
 </mat-dialog-actions>
