--- a/client/src/app/core/shared/extra-fields-info-bottom-sheet/extra-fields-info-bottom-sheet.component.html
+++ b/client/src/app/core/shared/extra-fields-info-bottom-sheet/extra-fields-info-bottom-sheet.component.html
@@ -2,19 +2,18 @@
 <div class="bottom-sheet-wrapper">
     <a matTooltip="Cerrar" (click)="closePanel($event)" class="nav-link close"><mat-icon>close</mat-icon></a>
     <div class="bottom-sheet-content">
-        <p>En MySuitcase te ayudamos a hacer la maleta para tu viaje según las opciones que configures mientras estás creando tu maleta,
-            aportando recomendaciones de elementos que podrían ser útiles en un viaje de esas características.
+        <p i18n>In <i>mySuitcase</i> we help you to pack your suitcase for your trip according to the options your configure while you create your suitcase,
+            providing suggestions of items that might be useful for a trip of those characteristics.
         </p>
 
-        <p>Otra cosa que nos ayuda a realizar recomendaciones de elementos acertadas es otros datos como la edad y/o el género</p>
+        <p i18n>Another thing that help us to make right suggestions is some personal data as the age or the gender</p>
 
-        <p>Por ejemplo, si eres un hombre adulto de 40 años, es posible que puedas necesitar una maquinilla de afeitar, o si tienes 80 años podrías usar bastón,
-             por lo que en tus listas te lo sugeriremos.<mat-icon class="icon">elderly_woman</mat-icon><mat-icon class="icon">elderly</mat-icon></p>
+        <p i18n>For instance, if you are 40 years old man, its possible that you could need a shave machine, or if your are 80 years old you could use a walking stick,
+             so that you will find it as suggested item when making up your list.<mat-icon class="icon">elderly_woman</mat-icon><mat-icon class="icon">elderly</mat-icon></p>
 
-        
+        <p i18n>Nevertheless, you will always be able to discard such a suggestions or to add any new item that does not appear as suggestion.</p>
 
-        <p>Sin embargo, siempre podrás desechar tales sugerencias o añadir cualquier elemento que no conste como sugerencia. </p>
+        <p i18n>Little by little we will improve our suggestions, so if you would like to enjoy of <strong>more precise suggestions</strong> add some more extra fields!</p>
 
-        <p>Poco a poco iremos mejorando nuestras recomendaciones, por lo que si deseas <strong>recomendaciones mas precisas</strong> añade algún campo extra más!</p>
     </div>
 </div>
