--- a/client/src/app/not-found/not-found.component.html
+++ b/client/src/app/not-found/not-found.component.html
@@ -14,9 +14,9 @@
 
     <div class="row align-items-center text-center text-md-left">
       <div class="col-md-6 col-lg-5 mb-5 mb-md-0">
-        <h1 >404: Esta página no existe.</h1>
-        <p> Oooops, parece que te equivocaste de maleta. Vuelve al menú principal para comenzar de nuevo.</p>
-        <a class="button button-hero mt-4" href="#">Volver</a>
+        <h1 i18n>404: Page not found</h1>
+        <p i18n> Oooops, It looks like you made a wrong suitcase. Go back to the main screen to start again.</p>
+        <a class="button button-hero mt-4" href="#" i18n="@@back_button">Go back</a>
       </div>
       <div class="col-md-6 col-lg-7 col-xl-6 offset-xl-1">
         <img class="img-fluid" src="assets/img/404/404.svg" alt="">
