--- a/client/src/app/public/home/containers/overview/dialog/remove-dialog.component.html
+++ b/client/src/app/public/home/containers/overview/dialog/remove-dialog.component.html
@@ -1,8 +1,8 @@
-<h2 mat-dialog-title>Eliminar maleta</h2>
+<h2 mat-dialog-title i18n>Remove suitcase</h2>
 <mat-dialog-content class="mat-typography">
-  <p>Estas seguro que quieres eliminar esta maleta?</p>
+  <p i18n>Are you sure that you wish to remove this suitcase?</p>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-  <button mat-button mat-dialog-close="false" color="basic">Cancelar</button>
-  <button mat-button mat-dialog-close="true" cdkFocusInitial color="warn">Eliminar</button>
+  <button mat-button mat-dialog-close="false" color="basic"  i18n="@@cancel_button">Cancel</button>
+  <button mat-button mat-dialog-close="true" cdkFocusInitial color="warn"  i18n="@@remove_button">Remove</button>
 </mat-dialog-actions>
