--- a/client/src/app/core/shared/info-dialog/info-dialog.component.html
+++ b/client/src/app/core/shared/info-dialog/info-dialog.component.html
@@ -3,6 +3,6 @@
   <p>{{message}}</p>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-  <button class="button border-1 mt-3" mat-button mat-dialog-close="true" cdkFocusInitial color="basic">ok</button>
-  <button class="button border-1 mt-3" mat-button mat-dialog-close="false" cdkFocusInitial color="basic">Cancelar</button>
+  <button class="button border-1 mt-3" mat-button mat-dialog-close="true" cdkFocusInitial color="basic" i18n="@@ok_button">Ok</button>
+  <button class="button border-1 mt-3" mat-button mat-dialog-close="false" cdkFocusInitial color="basic" i18n="@@cancel_button">Cancel</button>
 </mat-dialog-actions>
