--- a/client/src/app/core/shared/web-notification-suscriber/web-notification-suscriber.component.html
+++ b/client/src/app/core/shared/web-notification-suscriber/web-notification-suscriber.component.html
@@ -1,4 +1,4 @@
 <button class="button button-hero mt-4 subscribe-button" (click)="suscribeNotifications()">
-    <span>Suscribirme</span>
+    <span i18n="@@suscribe_button">Suscribe </span>
     <mat-icon aria-hidden="false" aria-label="Discard item">subscriptions</mat-icon>
 </button>
