--- a/client/src/app/public/create-suitcase/components/dialog/save-dialog.component.html
+++ b/client/src/app/public/create-suitcase/components/dialog/save-dialog.component.html
@@ -1,8 +1,8 @@
-<h2 mat-dialog-title>Guardar maleta</h2>
+<h2 mat-dialog-title i18n>Save the suitcase</h2>
 <mat-dialog-content class="mat-typography">
-  <p>Estas seguro que quieres guardar la maleta?</p>
+  <p i18n>Are you sure that you want to save and finish the suitcase?</p>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-  <button mat-button mat-dialog-close="false" color="basic">Cancelar</button>
-  <button mat-button mat-dialog-close="true" cdkFocusInitial color="warn">Guardar</button>
+  <button mat-button mat-dialog-close="false" color="basic" i18n="@@cancel_button">Cancel</button>
+  <button mat-button mat-dialog-close="true" cdkFocusInitial color="warn" i18n="@@save_button">Save</button>
 </mat-dialog-actions>
