--- a/client/src/app/core/login/containers/login.component.html
+++ b/client/src/app/core/login/containers/login.component.html
@@ -13,7 +13,7 @@
       </mat-error>
     </mat-form-field>
     <mat-form-field *ngIf="loginMode" class="full-width" appearance="outline">
-      <mat-label>Password</mat-label>
+      <mat-label i18n="@@password">Password</mat-label>
       <input type="password" matInput formControlName="password" i18n-placeholder placeholder="Introduce your password">
       <mat-error *ngIf="loginForm.get('password').hasError('required')" i18n>
         The field password is <strong>requered</strong>
@@ -29,8 +29,13 @@
         (click)="submit()" i18n>Go ahead!</button>
       <button type="submit" class="button border-1 mt-3" (click)="goTo('register')" i18n>I am new, I want to start!</button>
     </div>
-    <small><a href="javascript:void(0)" (click)="toggleMode()" class="nav-link" role="button" aria-haspopup="true"
-      aria-expanded="false">{{loginMode ? '¿Olvidaste la contraseña?' : 'Ya me acuerdo de la contraseña :)'}}</a></small>
+    <small>
+      <a href="javascript:void(0)" (click)="toggleMode()" class="nav-link" role="button" aria-haspopup="true" aria-expanded="false" 
+      *ngIf="loginMode; else registerMode" i18n>Did you forget the password?</a>
+      <ng-template #registerMode>
+        <a href="javascript:void(0)" (click)="toggleMode()" class="nav-link" role="button" aria-haspopup="true" aria-expanded="false" i18n>I already remember the passoword :)</a>
+      </ng-template>
+    </small>
   </div>
   <img class="login-img" alt="login image" src="../../../../assets/img/login/undraw_travelers.svg">
 </form>
