--- a/client/src/app/core/shared/navbar/containers/navbar.component.html
+++ b/client/src/app/core/shared/navbar/containers/navbar.component.html
@@ -12,19 +12,19 @@
         <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
           <ul class="nav navbar-nav menu_nav menu_nav--texts justify-content-end">
             <li *ngIf="(loginService.logged$ | async) && (loginService.logged$ | async).admin!" class="nav-item active" [routerLink]="['/admin']"><a i18n-matTooltip matTooltip="Admin area" class="nav-link" i18n>Admin</a></li>
-            <li *ngIf="loginService.isLoggedIn()" class="nav-item active" [routerLink]="['/home']" [queryParams]="{}" [fragment]="loginService.isLoggedIn() ? 'mySuitcases' : ''"><a i18n-matTooltip matTooltip="Have a look to the list of your already created suitcases" class="nav-link">My suitcases</a></li>
-            <li class="nav-item active"><a i18n-matTooltip matTooltip="Inform us regarding any incident or suggestion" class="nav-link" [routerLink]="['/contact']">Contact</a></li>
-            <li *ngIf="loginService.isLoggedIn()" class="nav-item active"><a i18n-matTooltip matTooltip="Manage your profile and other settings" class="nav-link" [routerLink]="['/settings']">Profile</a></li>
-            <li class="nav-item active"><a i18n-matTooltip matTooltip="Suscribe to be up to date by retriving all the notifications" class="nav-link" [routerLink]="['/home']" [queryParams]="{}" [fragment]="'notifications'">Suscribe</a></li>
-            <li *ngIf="loginService.isLoggedIn()" class="nav-item active" (click)="logout()"><a i18n-matTooltip matTooltip="Log out" class="nav-link">Logout</a></li>
+            <li *ngIf="loginService.isLoggedIn()" class="nav-item active" [routerLink]="['/home']" [queryParams]="{}" [fragment]="loginService.isLoggedIn() ? 'mySuitcases' : ''"><a i18n-matTooltip matTooltip="Have a look to the list of your already created suitcases" class="nav-link" i18n>My suitcases</a></li>
+            <li class="nav-item active"><a i18n-matTooltip matTooltip="Inform us regarding any incident or suggestion" class="nav-link" [routerLink]="['/contact']" i18n>Contact</a></li>
+            <li *ngIf="loginService.isLoggedIn()" class="nav-item active"><a i18n-matTooltip matTooltip="Manage your profile and other settings" class="nav-link" [routerLink]="['/settings']" i18n>Profile</a></li>
+            <li class="nav-item active"><a i18n-matTooltip matTooltip="Subscribe to be up to date by retriving all the notifications" class="nav-link" [routerLink]="['/home']" [queryParams]="{}" [fragment]="'notifications'" i18n>Subscribe</a></li>
+            <li *ngIf="loginService.isLoggedIn()" class="nav-item active" (click)="logout()"><a i18n-matTooltip matTooltip="Log out" class="nav-link" i18n>Logout</a></li>
           </ul>
           <ul class="nav navbar-nav menu_nav menu_nav--icons justify-content-end">
             <li *ngIf="(loginService.logged$ | async) && (loginService.logged$ | async).admin!" class="nav-item active" [routerLink]="['/admin']" routerLinkActive="active-link"><a i18n-matTooltip matTooltip="Admin area" class="nav-link"><mat-icon>admin_panel_settings</mat-icon></a></li>
             <li *ngIf="loginService.isLoggedIn()" class="nav-item active" [routerLink]="['/home']" [queryParams]="{}" [fragment]="loginService.isLoggedIn() ? 'mySuitcases' : ''"><a i18n-matTooltip matTooltip="Have a look to the list of your already created suitcases" class="nav-link"><mat-icon>luggage</mat-icon></a></li>
             <li class="nav-item active"><a i18n-matTooltip matTooltip="Inform us regarding any incident or suggestion" class="nav-link" [routerLink]="['/contact']" routerLinkActive="active-link"><mat-icon>support</mat-icon></a></li>
             <li *ngIf="loginService.isLoggedIn()" class="nav-item active"><a i18n-matTooltip matTooltip="Manage your profile and other settings" class="nav-link" [routerLink]="['/settings']" routerLinkActive="active-link"><mat-icon>settings</mat-icon></a></li>
-            <li class="nav-item active"><a i18n-matTooltip matTooltip="Suscribe to be up to date by retriving all the notifications" class="nav-link" [routerLink]="['/home']" [queryParams]="{}" [fragment]="'notifications'"><mat-icon>notificationsactive</mat-icon></a></li>
-            <li *ngIf="loginService.isLoggedIn()" class="nav-item active" (click)="logout()"><a i18n-matTooltip matTooltip="Log out" class="nav-link"><mat-icon>Logout</mat-icon></a></li>
+            <li class="nav-item active"><a i18n-matTooltip matTooltip="Subscribe to be up to date by retriving all the notifications" class="nav-link" [routerLink]="['/home']" [queryParams]="{}" [fragment]="'notifications'"><mat-icon>notificationsactive</mat-icon></a></li>
+            <li *ngIf="loginService.isLoggedIn()" class="nav-item active" (click)="logout()"><a i18n-matTooltip matTooltip="Log out" class="nav-link"><mat-icon>logout</mat-icon></a></li>
           </ul>
         </div>
       </div>
