--- a/client/src/app/public/home/containers/home/home.component.html
+++ b/client/src/app/public/home/containers/home/home.component.html
@@ -148,7 +148,7 @@
         <div class="row align-items-center text-center text-md-left">
           <div id="buttons-area" class="col-md-6 col-lg-5 mb-5 mb-md-0">
             <h1 i18n>Lets go for a trip!</h1>
-            <button class="button button-hero mt-4" (click)="createSuitcase()" i18n>Create new oe</button>
+            <button class="button button-hero mt-4" (click)="createSuitcase()" i18n>Create new suitcase</button>
           </div>
           <div id="image-area" class="col-md-6 col-lg-7 col-xl-6 offset-xl-1">
             <img class="img-fluid" src="../../../../../assets/img/home/undraw_airport.svg" alt="maleta">
