--- a/client/src/app/public/register/containers/register.component.html
+++ b/client/src/app/public/register/containers/register.component.html
@@ -45,7 +45,7 @@
       aria-expanded="false" i18n>I am already registered, I want going back.</a></small>
   </div>
 
-  <img class="register-img" alt="login image" src="../../../../assets/img/login/undraw_travelers.svg">
+  <img class="register-img" alt="login image" src="assets/img/login/undraw_travelers.svg">
 </form>
 
 <footer-component></footer-component>
