--- a/client/src/app/core/session/timeout-dialog/timeout-dialog.component.html
+++ b/client/src/app/core/session/timeout-dialog/timeout-dialog.component.html
@@ -1,6 +1,6 @@
 <h2 mat-dialog-title i18n>The session is about to expire</h2>
 <mat-dialog-content class="mat-typography">
-  <p><span i18n>The session is going to expire in </span> {{sessionService.sessionSeconds}} <span i18n>segundos</span></p>
+  <p><span i18n>The session is going to expire in </span> {{sessionService.sessionSeconds}} <span i18n>seconds</span></p>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-button color="warn" i18n>Logout</button>
