--- a/client/src/app/public/home/containers/home/home.component.html
+++ b/client/src/app/public/home/containers/home/home.component.html
@@ -10,7 +10,7 @@
           <button class="button button-hero mt-4" (click)="goTo('login')" i18n>Login/Sign Up</button>
         </div>
         <div class="col-md-6 col-lg-7 col-xl-6 offset-xl-1">
-          <img class="img-fluid" src="../../../../../assets/img/home/undraw_airport.svg" alt="">
+          <img class="img-fluid" src="assets/img/home/undraw_airport.svg" alt="">
         </div>
       </div>
     </div>
@@ -151,7 +151,7 @@
             <button class="button button-hero mt-4" (click)="createSuitcase()" i18n>Create new suitcase</button>
           </div>
           <div id="image-area" class="col-md-6 col-lg-7 col-xl-6 offset-xl-1">
-            <img class="img-fluid" src="../../../../../assets/img/home/undraw_airport.svg" alt="maleta">
+            <img class="img-fluid" src="assets/img/home/undraw_airport.svg" alt="maleta">
           </div>
           <div id="questions-area">
             <my-suitcase-create-suitcase-form></my-suitcase-create-suitcase-form>
@@ -184,7 +184,7 @@
       <div class="row">
         <div class="col-lg-7 col-md-6 mb-4 mb-md-0">
           <div class="about-img">
-            <img class="img-fluid" src="../../../../../assets/img/home/undraw_world.svg" alt="">
+            <img class="img-fluid" src="assets/img/home/undraw_world.svg" alt="">
           </div>
         </div>
         <div class="col-lg-5 col-md-6 align-self-center about-content">
@@ -213,7 +213,7 @@
           <web-notification-subscriber></web-notification-subscriber>
         </div>
         <div class="col-lg-7 col-md-6 mb-4 mb-md-0 notification__img-container">
-          <img class="img-fluid" src="../../../../../assets/img/notifications/notifications.jpg" alt="">
+          <img class="img-fluid" src="assets/img/notifications/notifications.jpg" alt="">
         </div>
       </div>
     </div>
