add tool for merging translation to target translation files

--- a/client/src/app/public/create-suitcase/components/item-list/item-list.component.html
+++ b/client/src/app/public/create-suitcase/components/item-list/item-list.component.html
@@ -29,7 +29,7 @@
   </ng-container>
   <ng-container *ngSwitchCase="'baby'">
     <div class="card-header card-subheader" *ngIf="itemList.length > 0">
-      <mat-icon matSuffix  i18n-matTooltip matTooltip="Beby" [matTooltipPosition]="'below'">baby_changing_station</mat-icon>
+      <mat-icon matSuffix  i18n-matTooltip matTooltip="Baby" [matTooltipPosition]="'below'">baby_changing_station</mat-icon>
       <span i18n="@@baby">Baby</span>
     </div>
   </ng-container>
